--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,16 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.1|^8",
         "phpunit/phpunit": "^7.1|^8|^9"
     },
     "require-dev": {
-        "php": "^7.1.3",
+        "php": "^7.1.3|^8",
         "composer/semver": "^1.5",
         "friendsofphp/php-cs-fixer": "^2.14",
         "ocramius/package-versions": "^1.4",
         "symfony/expression-language": "^3.3|^4|^5",
-        "vimeo/psalm": "^3.9"
+        "vimeo/psalm": "^3.9|^4"
     },
     "suggest": {
         "composer/semver": "For using version-related requirements",
