--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   tests:
+    name: Tests
     strategy:
       matrix:
         operating-system: [ubuntu-latest]
@@ -51,7 +52,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '7.4'
+          php-version: latest
           coverage: none
 
       - name: Get composer cache directory
@@ -81,7 +82,7 @@ jobs:
       - name: Setup PHP, with composer and extensions
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.0'
+          php-version: latest
           coverage: none
 
       - name: Get composer cache directory
