Allow ocramius/package-versions plugin
Fixes the following error:
  Error: ocramius/package-versions contains a Composer plugin which is blocked by your allow-plugins config. You may add it to the list if you consider it safe.

See https://getcomposer.org/allow-plugins

--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,9 @@
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "ocramius/package-versions": true
+        }
     }
 }
